--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <form action="">
                 <div class="container__input">
                     <label for="">Digite um número:</label>
-                    <input type="number" id="num" />
+                    <input type="number" id="num" required />
                 </div>
                 <input class="button" type="submit" value="verificar número primo">
             </form>
